--- a/Installationspaket/css/index.css
+++ b/Installationspaket/css/index.css
@@ -55,13 +55,15 @@
         color: white;
         font-size: 1.4em;
         font-family: OpenSans-Light;
+		
     }
 	
 	#sprache{
 	color: white;
-	font-size: 0.5em;
+	font-size: 0.8em;
 	font-family: OpenSans-Light;
-	text-align: right;
+	font-weight: bold;
+		margin-right: 10%;
 	
 	
 	}
